[gd_scene load_steps=4 format=2]

[ext_resource path="res://raw_assets/fonts/AnotherDanger16.tres" type="DynamicFont" id=1]
[ext_resource path="res://raw_assets/fonts/AnotherDanger22.tres" type="DynamicFont" id=2]
[ext_resource path="res://levels/OptionsMenu.gd" type="Script" id=3]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.793701
margin_top = 0.396851
margin_right = -0.793701
margin_bottom = 0.396851
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 830.0
margin_top = 455.0
margin_right = 1089.0
margin_bottom = 625.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 259.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 259.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 155.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "Mouse Sensitivity"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 259.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MouseSensitivitySlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 11.0
margin_right = 100.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
min_value = 20.0
max_value = 100.0
step = 5.0
value = 20.0

[node name="CloseButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 259.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "Close"
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/MouseSensitivitySlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
